<resources>
    <string name="app_name">Temperature Converter</string>

    <string name="convert_header">Convert:</string>
    <string name="convert_Button">Convert</string>

    <string name="rb1_Left">Celsius</string>
    <string name="rb2_Left">Fahrenheit</string>
    <string name="rb3_Left">Kelvin</string>
    <string name="rb4_Left">Rankine</string>

    <string name="rb1_Right">Celsius</string>
    <string name="rb2_Right">Fahrenheit</string>
    <string name="rb3_Right">Kelvin</string>
    <string name="rb4_Right">Rankine</string>

    <string name="action_settings">Settings</string>
</resources>
