<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <TextView android:text="@string/convert_header"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:textSize="@dimen/abc_text_size_large_material" />

<LinearLayout
    android:layout_width="239dp"
    android:layout_height="47dp"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text=""
        android:id="@+id/tempToConvertText"
        android:layout_weight="0.31"
        android:textSize="@dimen/abc_text_size_medium_material" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <RadioGroup
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:id="@+id/radioGroup_Left">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb1_Left"
            android:id="@+id/rb1_left" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2_Left"
            android:id="@+id/rb2_left" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb3_Left"
            android:id="@+id/rb3_left" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb4_Left"
            android:id="@+id/rb4_left" />


    </RadioGroup>

    <RadioGroup
        android:layout_width="160dp"
        android:layout_height="140dp"
        android:id="@+id/radioGroup_right">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb1_Right"
            android:id="@+id/rb1_right" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb2_Right"
            android:id="@+id/rb2_right" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb3_Right"
            android:id="@+id/rb3_right" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb4_Right"
            android:id="@+id/rb4_right" />


    </RadioGroup>


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/convert_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="360dp"
            android:gravity="center"
            android:text="@string/convert_button"/>
        <TextView
            android:id="@+id/tempOutputLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="360dp"
            android:textSize="@dimen/abc_text_size_large_material" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/formula_Output"
            android:width="340dp"
            android:textSize="@dimen/abc_text_size_medium_material"/>
    </LinearLayout>

</LinearLayout>
